--- a/FrameSet.html
+++ b/FrameSet.html
@@ -3,7 +3,7 @@
     <head>
         <title>HTML frame</title>
     </head>
-    <frameset rows="25%,50%,80%">
+    <frameset rows="25%,50%.25%">
         <frame name = "left" src = "https://www.tutorialspoint.com/html/top_frame.htm"/>
         <frame name = "center" src = "https://www.google.com">
             <frame name = "right" src = "https://www.tutorialspoint.com/html/bottom_frame.htm" />
