--- a/RegistationForm.html
+++ b/RegistationForm.html
@@ -8,6 +8,7 @@
         </style>
 
     <body style="text-align: center; background-color:#a5f593;">
+        <h1>Registration form</h1>
         <div class="x">
             <form method="get">
             <label for="famname">Family Name:</label><br>
@@ -26,11 +27,11 @@
 
                 <textarea  id="adress" cols="50" rows="4"></textarea>
             </address>
-            Department <select name="profession" id="profession"> 
+            Profession <select name="profession" id="profession"> <br>
 
                 <option value="student" id="profession" name="profession">Software engineer</option>
                 <option value="engineer" id="profession" name="profession">Architecture</option>
-                <option value="professor" id="profession" name="profession">Tourism management</option></section><br>
+                <option value="professor" id="profession" name="profession">Tourism management</option></select><br>
             <input type="submit" value="Submit">
             </form>
         </div>
