--- a/ClassAssignment/2SecondAssignment/3-Palindorme.html
+++ b/ClassAssignment/2SecondAssignment/3-Palindorme.html
@@ -8,9 +8,9 @@
                 let z = y.split("").reverse().join("");
                 // return [z === y] ? "yes" : "no";
                 if(z===y){
-                    return [y +":  true"];
+                    return [y +" is a Palindorme"];
                 }else{
-                    return [y +": false"];
+                    return [y +" is not a Palindorme"];
                 }
             }
             // let nice = "madam"
