--- a/JS-htmlDemo/39.html
+++ b/JS-htmlDemo/39.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>Odd or Even</h2>
+
+<p id="demo"></p>
+
+<script>
 
 let i = 0;
 while (i < 16) {
@@ -8,5 +17,12 @@ while (i < 16) {
       }else{
         x="Odd"
       }
-      console.log(i + x)    
+      document.write(i + x) ;
     }
+
+
+
+</script>
+
+</body>
+</html>
